--- a/Homework.html
+++ b/Homework.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru-RU">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +10,7 @@
     <div class="container">
         <header class="header">
             <h1>Магазин одежды</h1>
-            <p>Лучший магазин товаров в Борисове</p>
+            <p>Лучший магазин товаров в Волжском</p>
         </header>
         
         <main class="main">
